--- a/888repair/Views/Kind/KindIndex.cshtml
+++ b/888repair/Views/Kind/KindIndex.cshtml
@@ -52,8 +52,8 @@
         <input type="hidden" class="form-control" disabled="disabled" id="KindID">
         <div class="layui-inline">
             <label class="layui-form-label">系统类别&nbsp;&nbsp;<label style="color:red">*</label></label>
-            <div class="layui-input-inline" style="height:38px;width:300px">
-                <select ID="addSystemCategory" name="addSystemCategory">
+            <div class="layui-input-block" style="height:38px;width:300px">
+                <select ID="addSystemCategory" name="addSystemCategory" lay-verify="required">
                     <option value=""></option>
                     <option value="IT(资讯类)">IT(资讯类)</option>
                     <option value="Logistics(总务后勤类)">
