--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -18,9 +18,6 @@
         <div class="layui-form-item">
             <div class="layui-inline">
                 <label class="layui-form-label">系统类别</label>
-                @*<div class="layui-input-block">
-                    <input type="text" name="SystemCategory" id="SystemCategory" required lay-verify="required" autocomplete="off" class="layui-input">
-                </div>*@
                 <div class="layui-input-inline">
                     <select ID="SystemCategory" name="SystemCategory">
                         <option value=""></option>
@@ -62,8 +59,14 @@
         <input type="hidden" class="form-control" disabled="disabled" id="AreaId">
         <div class="layui-inline">
             <label class="layui-form-label">系统类别&nbsp;&nbsp;<label style="color:red">*</label></label>
-            <div class="layui-input-block">
-                <input type="text" name="addSystemCategory" id="addSystemCategory" lay-verify="required" autocomplete="off" class="layui-input" style="height:38px;width:300px">
+            <div class="layui-input-block" style="height:38px;width:300px">
+                <select ID="addSystemCategory" name="addSystemCategory" lay-verify="required">
+                    <option value=""></option>
+                    <option value="IT(资讯类)">IT(资讯类)</option>
+                    <option value="Logistics(总务后勤类)">
+                        Logistics(总务后勤类)
+                    </option>
+                </select>
             </div>
         </div>
         <div class="layui-inline">
@@ -246,9 +249,10 @@
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_del').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_search').addClass("layui-btn-disabled").attr("disabled", true);
-            $("#addSystemCategory").val("");
+            $('select[name=addSystemCategory]').val("");
             $("#addBuliding").val("");
             $("#addLocation").val("");
+            render();
             layer.open({
                 title: '新增辖区',
                 area: ['55%','30%'],
@@ -287,10 +291,11 @@
             } 
 
             $("#AreaId").val(selectData[0].AreaId);
-            $("#addSystemCategory").val(selectData[0].SystemCategory);
+            $('select[name=addSystemCategory]').val(selectData[0].SystemCategory);
             $("#addBuliding").val(selectData[0].Buliding);
             $("#addLocation").val(selectData[0].Location);
             $("#addPermission").val(selectData[0].Permission);
+            render();
 
             $('#btn_add').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
