--- a/888repair/Views/Kind/KindMatchIndex.cshtml
+++ b/888repair/Views/Kind/KindMatchIndex.cshtml
@@ -459,7 +459,7 @@
             var SystemCategory = data.value;
             if (SystemCategory == null || SystemCategory == "") {
                 $("#addKindCategory").empty();
-                $('#addOpEmpNo').append(new Option());
+                $("#addOpEmpNo").empty();
                 form.render();
                 return false;
             } else {
