fix 业管维护 重置功能下拉框未清空的问题

--- a/888repair/Views/Kind/KindIndex.cshtml
+++ b/888repair/Views/Kind/KindIndex.cshtml
@@ -292,10 +292,11 @@
                     submited.click();
                 },
                 btn2: function (index, layero) {
-                    $("#addSystemCategory").val("");
+                    $('select[name=addSystemCategory]').val("");
                     $("#addKindCategory").val("");
                     $("#addRemark").val("");
                     $("#addSort").val("");
+                    render();
                     return false;
                 },
                 cancel: function (layero, index) {
