业管维护&&辖区维护：设置修改时 系统类别栏位锁定无法修改

--- a/888repair/Views/Kind/KindIndex.cshtml
+++ b/888repair/Views/Kind/KindIndex.cshtml
@@ -10,6 +10,10 @@
         body {
             padding: 32px; /*overflow-y: scroll;*/
         }
+
+        .layui-select-disabled .layui-disabled {
+            color: #000000 !important;
+        }
     </style>
 </head>
 <body>
@@ -330,6 +334,7 @@
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_del').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_search').addClass("layui-btn-disabled").attr("disabled", true);
+            $('#addSystemCategory').addClass("layui-disabled").attr("disabled", "disabled");
 
 
             layer.open({
