--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -10,6 +10,10 @@
         body {
             padding: 32px; /*overflow-y: scroll;*/
         }
+
+        .layui-select-disabled .layui-disabled {
+            color: #000000 !important;
+        }
     </style>
 </head>
 <body>
@@ -302,6 +306,7 @@
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_del').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_search').addClass("layui-btn-disabled").attr("disabled", true);
+            $('#addSystemCategory').addClass("layui-disabled").attr("disabled", "disabled");
 
 
             layer.open({
