晚上业管配对 下拉框的监听问题

--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -274,6 +274,7 @@
                     $("#addBuilding").val("");
                     $("#addLocation").val("");
                     render();
+                    loadOption();
                     return false;
                 },
                 cancel: function (layero, index) {
