--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -55,6 +55,7 @@
                     <li class="layui-nav-item current" data-id="fill"><a class="layui-nav-item " language="fill">填写问题</a></li>
                     <li class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
                     <li class="layui-nav-item" data-id="kindMatch"><a class="layui-nav-item ">业管配对维护</a></li>
+                    @*<li class="layui-nav-item" data-id="fillQuestion"><a class="layui-nav-item ">业管配对维护</a></li>*@
                     <li class="layui-nav-item">
                         <a href="javascript:;">基础数据维护</a>
                         <dl class="layui-nav-child" id="MenuChild">
@@ -144,7 +145,7 @@
                         i = 0;
                     break;
                 case "#fill":
-                    pathn = "@(Url.Action("GroupIndex", "Group"))",
+                    pathn = "@(Url.Action("RepairIndex", "Repair"))",
                         i = 0;
                     break;
                 case "#charge":
@@ -161,6 +162,10 @@
                     break;
                 case "#kindMatch":
                     pathn = "@(Url.Action("KindMatchIndex", "Kind"))",
+                        i = 0;
+                    break;
+                case "#fillQuestion":
+                    pathn = "@(Url.Action("RepairIndex", "Repair"))",
                         i = 0;
                     break;
                 default:
