--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
             var hour = now.getHours();     //返回日期中的小时数（0到23）
             var minute = now.getMinutes(); //返回日期中的分钟数（0到59）
             var second = now.getSeconds(); //返回日期中的秒数（0到59）
-            return year + "-" + month + "-" + date + " " + hour + ":" + minute + ":" + second; s
+            return year + "-" + month + "-" + date + " " + hour + ":" + minute + ":" + second;
         }
         else {
             return ;
